--- a/cobigen-templates/templates-oasp4j/pom.xml
+++ b/cobigen-templates/templates-oasp4j/pom.xml
@@ -39,5 +39,10 @@
       <artifactId>xercesImpl</artifactId>
       <version>2.11.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.devonfw.cobigen</groupId>
+      <artifactId>openapiplugin-model</artifactId>
+      <version>2.1.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
