--- a/cobigen-templates/templates-oasp4j/pom.xml
+++ b/cobigen-templates/templates-oasp4j/pom.xml
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>openapiplugin-model</artifactId>
-      <version>2.1.0-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
   </dependencies>
 </project>
