--- a/cobigen-templates/pom.xml
+++ b/cobigen-templates/pom.xml
@@ -31,6 +31,7 @@
     <resources>
       <resource>
         <directory>${basedir}</directory>
+        <directory>src/main/templates</directory>
         <excludes>
           <exclude>/target/**/*</exclude>
           <exclude>*.classpath</exclude>
