--- a/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesOpenApiInput/pom.xml
+++ b/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesOpenApiInput/pom.xml
@@ -34,7 +34,7 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tempeng-freemarker</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
