--- a/cobigen-maven/cobigen-maven-plugin/pom.xml
+++ b/cobigen-maven/cobigen-maven-plugin/pom.xml
@@ -39,12 +39,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
-      <version>5.0.0</version>
-    </dependency>
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>core-api</artifactId>
-      <version>5.0.0</version>
+      <version>5.1.0-SNAPSHOT</version>
     </dependency>
 
     <!-- dependencies to annotations -->
