--- a/cobigen-eclipse/cobigen-eclipse/build.properties
+++ b/cobigen-eclipse/cobigen-eclipse/build.properties
@@ -19,6 +19,6 @@ bin.includes = .,\
                lib/logback-core-1.1.2.jar,\
                lib/mmm-util-core-7.4.0.jar,\
                lib/slf4j-api-1.7.21.jar,\
-               lib/core-5.0.0.jar,\
-               lib/core-api-5.0.0.jar,\
-               lib/javaplugin-model-2.0.0.jar
+               lib/javaplugin-model-2.0.0.jar,\
+               lib/core-5.1.0-SNAPSHOT.jar,\
+               lib/core-api-5.1.0-SNAPSHOT.jar
