--- a/cobigen-templates/templates-oasp4j/pom.xml
+++ b/cobigen-templates/templates-oasp4j/pom.xml
@@ -25,6 +25,11 @@
       <version>2.0</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-rest-webmvc</artifactId>
+      <version>3.0.9.RELEASE</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
       <version>3.5</version>
