--- a/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesRestServiceInput/pom.xml
+++ b/cobigen-templates/templates-oasp4j/src/test/resources/testdata/templatetest/TestAllTemplatesRestServiceInput/pom.xml
@@ -11,6 +11,11 @@
       <artifactId>javax.ws.rs-api</artifactId>
       <version>2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-rest-webmvc</artifactId>
+      <version>3.0.9.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
@@ -32,7 +37,8 @@
           <configurationFolder>${templatesProject}</configurationFolder>
           <inputFiles>
             <inputFile>src/main/java/io/github/devonfw/cobigen/generator/service/api/rest/InputNoAnnotationsRestService.java</inputFile>
-            <inputFile>src/main/java/io/github/devonfw/cobigen/generator/service/api/rest/InputRestService.java</inputFile>
+            <inputFile>src/main/java/io/github/devonfw/cobigen/generator/service/api/rest/JavaxAnnotationsInputRestService.java</inputFile>
+            <inputFile>src/main/java/io/github/devonfw/cobigen/generator/service/api/rest/SpringAnnotationsInputRestService.java</inputFile>
           </inputFiles>
           <templates>
             <template>ALL</template>
@@ -43,7 +49,7 @@
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
             <artifactId>tempeng-freemarker</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.0</version>
           </dependency>
           <dependency>
             <groupId>com.devonfw.cobigen</groupId>
