--- a/cobigen-eclipse/cobigen-eclipse/.classpath
+++ b/cobigen-eclipse/cobigen-eclipse/.classpath
@@ -20,7 +20,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/mmm-util-core-7.4.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/javaplugin-model-2.0.0.jar"/>
-	<classpathentry exported="true" kind="lib" path="lib/core-5.1.0-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/core-5.1.0-SNAPSHOT.jar" sourcepath="/core"/>
 	<classpathentry exported="true" kind="lib" path="lib/core-api-5.1.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
