--- a/cobigen/cobigen-core-parent/pom.xml
+++ b/cobigen/cobigen-core-parent/pom.xml
@@ -12,7 +12,7 @@
   </parent>
 
   <properties>
-    <cobigencore.version>5.1.0</cobigencore.version>
+    <cobigencore.version>5.2.0-SNAPSHOT</cobigencore.version>
   </properties>
 
   <modules>
