--- a/cobigen-eclipse/cobigen-eclipse/build.properties
+++ b/cobigen-eclipse/cobigen-eclipse/build.properties
@@ -20,5 +20,5 @@ bin.includes = .,\
                lib/mmm-util-core-7.4.0.jar,\
                lib/slf4j-api-1.7.21.jar,\
                lib/javaplugin-model-2.0.0.jar,\
-               lib/core-5.1.0-SNAPSHOT.jar,\
-               lib/core-api-5.1.0-SNAPSHOT.jar
+               lib/core-5.1.0.jar,\
+               lib/core-api-5.1.0.jar
