--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
     <icsd.server.url>de-mucevolve02.corp.capgemini.com</icsd.server.url>
     <icsd.webserver.url>http://${icsd.server.url}</icsd.webserver.url>
     <p2.upload.url>ftp://${icsd.server.url}</p2.upload.url>
-    <p2.repository.build.dir>${project.build.directory}/repository</p2.repository.build.dir>
-    <p2.repository.upload.dir>${project.build.directory}/repository-upload</p2.repository.upload.dir>
+    <p2.repository.build.dir>${project.baseUri}/target/repository</p2.repository.build.dir>
+    <p2.repository.upload.dir>target/repository-upload</p2.repository.upload.dir>
     <updatesite.path>files/cobigen/updatesite</updatesite.path>
   </properties>
 
