--- a/cobigen-eclipse/cobigen-eclipse-test/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse-test/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>com.devonfw.cobigen.eclipse.test</artifactId>
   <name>CobiGen - Eclipse Plug-In Tests</name>
   <packaging>eclipse-test-plugin</packaging>
-  <version>4.1.0</version>
+  <version>4.1.0-SNAPSHOT</version>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>com.devonfw.cobigen</groupId>
       <artifactId>core-test</artifactId>
-      <version>5.0.0</version>
+      <version>5.1.0</version>
     </dependency>
   </dependencies>
 
