--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -35,6 +35,73 @@
       <version>5.0.0</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- GraalJS needed dependencies start -->
+    <dependency>
+      <groupId>org.graalvm.sdk</groupId>
+      <artifactId>graal-sdk</artifactId>
+      <version>1.0.0-rc12</version>
+    </dependency>
+    <dependency>
+      <groupId>jline</groupId>
+      <artifactId>jline</artifactId>
+      <version>2.14.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm.truffle</groupId>
+      <artifactId>truffle-api</artifactId>
+      <version>1.0.0-rc12</version>
+    </dependency>
+    <dependency>
+      <groupId>com.ibm.icu</groupId>
+      <artifactId>icu4j</artifactId>
+      <version>62.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-util</artifactId>
+      <version>6.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-commons</artifactId>
+      <version>6.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-analysis</artifactId>
+      <version>6.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm-tree</artifactId>
+      <version>6.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.ow2.asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>6.2.1</version>
+    </dependency>
+    
+  <!-- GraalJS needed dependencies on Nexus3 -->
+    <dependency>
+      <groupId>org.graalvm</groupId>
+      <artifactId>graal-js</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm</groupId>
+      <artifactId>graaljs-scriptengine</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.oracle.truffle.regex</groupId>
+      <artifactId>tregex</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
+    <!-- GraalJS needed dependencies end -->
+    
   </dependencies>
 
   <build>
@@ -51,7 +118,7 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>https://registry.npmjs.org/@oasp/ts-merger/-/ts-merger-2.0.0.tgz</url>
+              <url>https://registry.npmjs.org/@devonfw/ts-merger/-/ts-merger-2.1.1.tgz</url>
               <outputFileName>ts-merger.tgz</outputFileName>
               <skipCache>true</skipCache>
               <outputDirectory>${project.build.directory}/download</outputDirectory>
@@ -64,7 +131,7 @@
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>https://registry.npmjs.org/js-beautify/-/js-beautify-1.6.14.tgz</url>
+              <url>https://registry.npmjs.org/js-beautify/-/js-beautify-1.8.9.tgz</url>
               <outputFileName>js-beautify.tgz</outputFileName>
               <skipCache>true</skipCache>
               <outputDirectory>${project.build.directory}/download</outputDirectory>
