--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.17</version>
+		  <configuration>
+			<argLine>-Dfile.encoding=${project.build.sourceEncoding}</argLine>
+		  </configuration>
           <dependencies>
             <dependency>
               <groupId>org.apache.maven.surefire</groupId>
