--- a/cobigen-eclipse/cobigen-eclipse-test/pom.xml
+++ b/cobigen-eclipse/cobigen-eclipse-test/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>com.devonfw.cobigen.eclipse.test</artifactId>
   <name>CobiGen - Eclipse Plug-In Tests</name>
   <packaging>eclipse-test-plugin</packaging>
-  <version>4.3.2-SNAPSHOT</version>
+  <version>4.3.2</version>
 
   <parent>
     <groupId>com.devonfw.cobigen</groupId>
