--- a/cobigen/cobigen-core-parent/cobigen-core/pom.xml
+++ b/cobigen/cobigen-core-parent/cobigen-core/pom.xml
@@ -62,8 +62,8 @@
       <artifactId>resteasy-jackson-provider</artifactId>
       <version>2.2.1.GA</version>
     </dependency>
-
-    <dependency>
+    
+        <dependency>
       <groupId>net.sf.dozer</groupId>
       <artifactId>dozer</artifactId>
       <version>5.5.1</version>
@@ -143,6 +143,29 @@
         <configuration>
           <excludePackageNames>com.devonfw.cobigen.impl.config.entity.io</excludePackageNames> <!-- /com/capgemini/cobigen/impl/config/entity/io/**/*.java -->
         </configuration>
+      </plugin>
+      
+      <!-- Used for JUnit tests, we need to copy a test resources file to the jar -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+          <execution>
+            <id>add-test-resources</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>add-resource</goal>
+            </goals>
+            <configuration>
+              <resources>
+                <resource>
+                  <directory>${project.basedir}/src/test/resources/testdata/unittest/ExternalProcess</directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
 
       <!-- Generation of configuration beans -->
