--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>tsplugin</artifactId>
   <name>CobiGen - TypeScript Plug-in</name>
-  <version>2.2.0-SNAPSHOT</version>
+  <version>2.2.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <description>CobiGen - TypeScript Plug-in</description>
 
@@ -63,39 +63,13 @@
         <version>1.3.0</version>
         <executions>
           <execution>
-            <id>download-ts-merger</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>wget</goal>
-            </goals>
-            <configuration>
-              <url>https://registry.npmjs.org/@devonfw/ts-merger/-/ts-merger-2.2.4.tgz</url>
-              <outputFileName>ts-merger.tgz</outputFileName>
-              <skipCache>true</skipCache>
-              <outputDirectory>${project.build.directory}/download</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
-            <id>download-beautify-js</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>wget</goal>
-            </goals>
-            <configuration>
-              <url>https://registry.npmjs.org/js-beautify/-/js-beautify-1.8.9.tgz</url>
-              <outputFileName>js-beautify.tgz</outputFileName>
-              <skipCache>true</skipCache>
-              <outputDirectory>${project.build.directory}/download</outputDirectory>
-            </configuration>
-          </execution>
-          <execution>
             <id>download-nest-server</id>
             <phase>generate-resources</phase>
             <goals>
               <goal>wget</goal>
             </goals>
             <configuration>
-              <url>https://registry.npmjs.org/@devonfw/cobigen-nestserver/-/cobigen-nestserver-1.0.3.tgz</url>
+              <url>https://registry.npmjs.org/@devonfw/cobigen-nestserver/-/cobigen-nestserver-1.0.6.tgz</url>
               <outputFileName>nest-server.tgz</outputFileName>
               <skipCache>true</skipCache>
               <outputDirectory>${project.build.directory}/download</outputDirectory>
@@ -108,38 +82,6 @@
         <artifactId>maven-antrun-plugin</artifactId>
         <version>1.8</version>
         <executions>
-          <execution>
-            <id>process-tsmerger-package</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <echo message="unpack ts-merger.tgz"/>
-                <mkdir dir="${project.build.directory}/download/ts-merger/"/>
-                <untar src="${project.build.directory}/download/ts-merger.tgz" compression="gzip" dest="${project.build.directory}/download/ts-merger/"/>
-                <echo message="copy ts-merger.umd.js"/>
-                <copy file="${project.build.directory}/download/ts-merger/package/dist/ts-merger.umd.js" tofile="${project.build.directory}/generated-sources/js/ts-merger.js"/>
-              </tasks>
-            </configuration>
-          </execution>
-          <execution>
-            <id>process-jsbeautify-package</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <echo message="unpack js-beautify.tgz"/>
-                <mkdir dir="${project.build.directory}/download/js-beautify/"/>
-                <untar src="${project.build.directory}/download/js-beautify.tgz" compression="gzip" dest="${project.build.directory}/download/js-beautify/"/>
-                <echo message="copy js-beautify.js"/>
-                <copy file="${project.build.directory}/download/js-beautify/package/js/lib/beautify.js" tofile="${project.build.directory}/generated-sources/js/beautify.js"/>
-              </tasks>
-            </configuration>
-          </execution>
           <execution>
             <id>process-nestserver-package</id>
             <phase>generate-resources</phase>
@@ -173,6 +115,20 @@
               <resources>
                 <resource>
                   <directory>${project.build.directory}/generated-sources/js</directory>
+                </resource>
+              </resources>
+            </configuration>
+          </execution>
+          <execution>
+            <id>add-nestserver-resources</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>add-resource</goal>
+            </goals>
+            <configuration>
+              <resources>
+                <resource>
+                  <directory>${project.build.directory}/generated-sources/nest-server</directory>
                 </resource>
               </resources>
             </configuration>
