--- a/cobigen/cobigen-tsplugin/pom.xml
+++ b/cobigen/cobigen-tsplugin/pom.xml
@@ -14,6 +14,9 @@
 
   <properties>
     <skip.deployment>false</skip.deployment>
+    <server.version>1.0.7</server.version>
+    <server.url>https://registry.npmjs.org/@devonfw/cobigen-nestserver/-/cobigen-nestserver-${server.version}.tgz</server.url>
+    <server.name>nestserver-${server.version}.exe</server.name>
   </properties>
 
   <dependencies>
@@ -58,79 +61,19 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.googlecode.maven-download-plugin</groupId>
-        <artifactId>download-maven-plugin</artifactId>
-        <version>1.3.0</version>
-        <executions>
-          <execution>
-            <id>download-nest-server</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>wget</goal>
-            </goals>
-            <configuration>
-              <url>https://registry.npmjs.org/@devonfw/cobigen-nestserver/-/cobigen-nestserver-1.0.6.tgz</url>
-              <outputFileName>nest-server.tgz</outputFileName>
-              <skipCache>true</skipCache>
-              <outputDirectory>${project.build.directory}/download</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.8</version>
-        <executions>
-          <execution>
-            <id>process-nestserver-package</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <configuration>
-              <tasks>
-                <echo message="unpack nest-server.tgz"/>
-                <mkdir dir="${project.build.directory}/download/nest-server/"/>
-                <untar src="${project.build.directory}/download/nest-server.tgz" compression="gzip" dest="${project.build.directory}/download/nest-server/"/>
-                <echo message="copy js-beautify.js"/>
-                <copy file="${project.build.directory}/download/nest-server/package/nestserver.exe" tofile="${project.build.directory}/generated-sources/nest-server/nestserver.exe"/>
-              </tasks>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>3.0.0</version>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>1.0.0</version>
         <executions>
           <execution>
-            <id>add-js-resources</id>
             <phase>generate-resources</phase>
             <goals>
-              <goal>add-resource</goal>
+              <goal>write-project-properties</goal>
             </goals>
             <configuration>
-              <resources>
-                <resource>
-                  <directory>${project.build.directory}/generated-sources/js</directory>
-                </resource>
-              </resources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>add-nestserver-resources</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>add-resource</goal>
-            </goals>
-            <configuration>
-              <resources>
-                <resource>
-                  <directory>${project.build.directory}/generated-sources/nest-server</directory>
-                </resource>
-              </resources>
+              <outputFile>
+                src/main/resources/externalserver/server.properties
+              </outputFile>
             </configuration>
           </execution>
         </executions>
