--- a/cobigen/cobigen-tsplugin/src/main/resources/externalserver/server.properties
+++ b/cobigen/cobigen-tsplugin/src/main/resources/externalserver/server.properties
@@ -1,5 +1,5 @@
 #Properties
-#Thu Apr 11 17:31:14 CEST 2019
+#Fri Apr 12 08:38:37 CEST 2019
 icsd.server.url=de-mucevolve02.corp.capgemini.com
 icsd.webserver.url=http\://de-mucevolve02.corp.capgemini.com
 attach.source.javadoc.build=true
@@ -19,3 +19,4 @@ p2.repository.build.dir=C\:\\Users\\jdiazgon\\Desktop\\CobiGen\\workspaces\\cobi
 gpg.passphrase=mavenRelease55
 p2.upload.url=ftp\://de-mucevolve02.corp.capgemini.com
 github.project=devonfw/tools-cobigen
+p2.repository.build.dir.url=C\:/Users/jdiazgon/Desktop/CobiGen/workspaces/cobigen-development/dev_tsplugin/cobigen/cobigen-tsplugin/target/repository
