--- a/cobigen-cli/pom.xml
+++ b/cobigen-cli/pom.xml
@@ -76,6 +76,17 @@
       <artifactId>picocli</artifactId>
       <version>2.2.1</version>
    </dependency>
+      <dependency>
+   <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-code-java-parser</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+   </dependency>
+   <dependency>
+   <groupId>net.sf.m-m-m</groupId>
+      <artifactId>mmm-code-base</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+   </dependency>
+   
   </dependencies>
   
     <build>
