--- a/cobigen-cli/.gitignore
+++ b/cobigen-cli/.gitignore
@@ -1,4 +1,4 @@
-.metadata
+.metadata/
 # Compiled class file
 *.class
 
@@ -25,4 +25,4 @@ hs_err_pid*
 
 target/
 .settings/
-.classpath/
+.classpath
