--- a/cobigen-cli/.classpath
+++ b/cobigen-cli/.classpath
@@ -32,5 +32,10 @@
 	<classpathentry kind="lib" path="C:/Users/jdiazgon/.m2/repository/net/sf/m-m-m/mmm-util-io/7.5.1/mmm-util-io-7.5.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/jdiazgon/.m2/repository/net/sf/m-m-m/mmm-code-base/1.0.0-SNAPSHOT/mmm-code-base-1.0.0-SNAPSHOT-sources.jar"/>
 	<classpathentry kind="lib" path="C:/Users/jdiazgon/.m2/repository/net/sf/m-m-m/mmm-code-java-parser/1.0.0-SNAPSHOT/mmm-code-java-parser-1.0.0-SNAPSHOT.jar"/>
+	<classpathentry excluding="**" kind="src" output="target/classes" path="src/main/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
